Remove a number of deprecation warnings. Removed some unused variables and redundant code. Added a few generated searialVersionUIDs.